Working icons without D8 working.

--- a/docroot/themes/custom/tower_health/components/_data/footer.yml
+++ b/docroot/themes/custom/tower_health/components/_data/footer.yml
@@ -1,13 +1,18 @@
 footer_social:
-  - url: "/"
+  - title: "Facebook"
+    url: "/"
     svg: "social-facebook.svg"
-  - url: "#"
+  - title: "Twitter"
+    url: "/"
     svg: "social-twitter.svg"
-  - url: "#"
+  - title: "LinkedIn"
+    url: "/"
     svg: "social-linkedin.svg"
-  - url: "#"
+  - title: "YouTube"
+    url: "/"
     svg: "social-youtube.svg"
-  - url: "#"
+  - title: "Instagram"
+    url: "/"
     svg: "social-instagram.svg"
 footer_contact:
   address_1: "420 S. Fifth Avenue"
