add in ability to have a button styled link

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -110,6 +110,13 @@ contact:
         text: 484-628-4656
     - label: 'Fax:'
       text: 484-628-4657
+insurance:
+  sidebar: true
+  items:
+    - buttonLink:
+        url: "#"
+        text: 'Insurances Accepted'
+      meta: 'Please check with your insurance provider before booking an appointment.'
 employed:
   label: Employed By
   sidebar: true
