--- a/config/sites/default/core.entity_view_display.menu_link_content.social-media.default.yml
+++ b/config/sites/default/core.entity_view_display.menu_link_content.social-media.default.yml
@@ -14,16 +14,15 @@ mode: default
 content:
   children:
     weight: 1
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   field_social_icon:
     weight: 2
-    label: above
-    settings:
-      use_description_as_link_text: true
+    label: hidden
+    settings: {  }
     third_party_settings: {  }
-    type: file_default
+    type: file_url_plain
     region: content
 hidden:
   search_api_excerpt: true
