slight modifications to provider detail page

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/provider-detail/provider-detail.yml
@@ -75,12 +75,8 @@ locations:
 certification:
   label: Board Certifications
   items:
-    - title: Vascular Neurology
-      text: American Board of Neurology
-    - title: Neurology
-      text: American Board of Neurology
-    - title: Example for Eligible
-      text: American Board of Neurology
+    - title: American Board of Neurology
+    - title: American Board of Orthopedics
       meta: Board Eligible, 2018
 education:
   label: Education
