--- a/docroot/themes/custom/tower_health/tower_health.info.yml
+++ b/docroot/themes/custom/tower_health/tower_health.info.yml
@@ -26,10 +26,11 @@ regions:
   header: 'Header'
   breadcrumb: 'Breadcrumb'
   page_header: 'Page Header'
+  page_filters: 'Page Filters'
   content: 'Content'  # the content region is required
   sidebar_first: 'Sidebar First'
   sidebar_second: 'Sidebar Second'
-  footer: Footer
+  footer: 'Footer'
 
 # Remove unwanted system stylesheets
 # stylesheets-remove:
