--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-service.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-service.yml
@@ -173,10 +173,10 @@ items:
   previous: true
   next: true
 cta:
-  title: "Need Help? We're Here."
+  title: "Find a Provider"
   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dolor dapibus, mollis diam id, euismod urna. Nulla finibus lorem in massa semper, at ultrices qam interdum. Praesent nec ante id lorem cursus."
   link:
     url: "/"
-    text: "484-628-HELP"
-    icon: "th-cal.svg"
+    text: "Find a Provider"
+    icon: "th-find-provider.svg"
     variation: "right"
