--- a/config/sites/default/core.entity_view_display.node.profile.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.teaser.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.profile.field_medical_specialties_ref
     - field.field.node.profile.field_profile_board_certified
     - field.field.node.profile.field_profile_education
+    - field.field.node.profile.field_profile_epic_id
     - field.field.node.profile.field_profile_first_name
     - field.field.node.profile.field_profile_gender
     - field.field.node.profile.field_profile_image
@@ -44,21 +45,29 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_location_ref:
+  field_area_interest_ref:
     type: entity_reference_label
-    weight: 3
+    weight: 5
     region: content
-    label: above
+    label: hidden
     settings:
-      link: true
+      link: false
     third_party_settings: {  }
-  field_medical_specialties_ref:
+  field_location_ref:
     type: entity_reference_label
     weight: 4
     region: content
-    label: above
+    label: hidden
     settings:
-      link: true
+      link: false
+    third_party_settings: {  }
+  field_medical_specialties_ref:
+    type: entity_reference_label
+    weight: 3
+    region: content
+    label: hidden
+    settings:
+      link: false
     third_party_settings: {  }
   field_profile_image:
     type: media_thumbnail
@@ -71,20 +80,11 @@ content:
     third_party_settings: {  }
   field_profile_languages:
     type: string
-    weight: 5
-    region: content
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-  field_rating_count:
-    type: number_integer
     weight: 6
     region: content
     label: hidden
     settings:
-      thousand_separator: ''
-      prefix_suffix: true
+      link_to_entity: false
     third_party_settings: {  }
   field_rating_overall:
     type: number_decimal
@@ -104,7 +104,6 @@ content:
     third_party_settings: {  }
 hidden:
   field_affiliations_ref: true
-  field_area_interest_ref: true
   field_insurance_ref: true
   field_profile_board_certified: true
   field_profile_education: true
@@ -123,4 +122,5 @@ hidden:
   field_profile_video: true
   field_rating_comment_count: true
   field_rating_comments_ref: true
+  field_rating_count: true
   search_api_excerpt: true
