--- a/config/sites/default/core.entity_form_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_form_display.node.profile.default.yml
@@ -170,9 +170,13 @@ content:
     region: content
   field_area_interest_ref:
     weight: 15
-    settings: {  }
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: options_select
+    type: readonly_field_widget
     region: content
   field_insurance_ref:
     weight: 17
@@ -186,15 +190,23 @@ content:
     region: content
   field_location_ref:
     weight: 13
-    settings: {  }
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: options_select
+    type: readonly_field_widget
     region: content
   field_medical_specialties_ref:
     weight: 16
-    settings: {  }
+    settings:
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: options_select
+    type: readonly_field_widget
     region: content
   field_profile_board_certified:
     weight: 19
@@ -249,10 +261,13 @@ content:
     type: readonly_field_widget
     region: content
   field_profile_image:
-    type: media_library_widget
+    type: readonly_field_widget
     weight: 12
     settings:
-      media_types: {  }
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
     region: content
   field_profile_job_title:
@@ -268,10 +283,12 @@ content:
   field_profile_languages:
     weight: 10
     settings:
-      size: 60
-      placeholder: ''
+      label: above
+      formatter_type: null
+      formatter_settings: null
+      show_description: false
     third_party_settings: {  }
-    type: string_textfield
+    type: readonly_field_widget
     region: content
   field_profile_last_name:
     weight: 3
