create sidebar cta list component

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/service-detail/service-detail.yml
@@ -41,6 +41,13 @@ rich_text:
   -
     paragraph_content:
       "Lorem <em>ipsum dolor sit amet</em>, consectetur adipiscing elit. Suspendisse vitae est sit amet est imperdiet pellentesque a eu eros. Aenean luctus purus ac magna auctor tristique. Vivamus vestibulum, nibh sit amet luctus pretium, lorem lorem mollis nulla, ut consectetur lacus est vel nunc. Quisque nec iaculis nisl. Vestibulum a elit magna. Donec nec nisi a justo placerat aliquam. Vivamus in turpis in felis dictum aliquet. Maecenas a ex laoreet, mattis turpis ut, lobortis lorem. Praesent placerat tempor lectus vel dignissim. Nam vestibulum sed ex id porta. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent non lectus nec leo accumsan congue. Morbi porta leo at risus lacinia, et elementum mi varius. Praesent at nulla a mi accumsan vulputate non vitae diam. Nullam a sem et lectus ullamcorper mattis a ut urna."
+cta_list:
+  - text: "Find a Provider"
+    url: "/"
+    icon: "th-my-tower.svg"
+  - text: "Find a Location"
+    url: "/"
+    icon: "th-find-hospital.svg"
 link_list:
   type: secondary
   title: "Our Services"
