TH-198 adjust image and address preprocess

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.yml
@@ -9,6 +9,6 @@ location:
     phone: "484-555-5555"
     fax: "484-555-5556"
   link:
-    url: "/"
+    href: "/"
     text: "Directions"
     icon: "th-find-hospital.svg"
