--- a/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
+++ b/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
@@ -11,8 +11,8 @@ dependencies:
     - tower_health
 id: exposedformfind_a_providerfind_doctor
 theme: tower_health
-region: content
-weight: -9
+region: page_header
+weight: -10
 provider: null
 plugin: 'views_exposed_filter_block:find_a_provider-find_doctor'
 settings:
