--- a/config/sites/default/block.block.gender.yml
+++ b/config/sites/default/block.block.gender.yml
@@ -11,8 +11,8 @@ dependencies:
     - tower_health
 id: gender
 theme: tower_health
-region: content
-weight: -4
+region: page_filters
+weight: -8
 provider: null
 plugin: 'facet_block:gender'
 settings:
