--- a/config/sites/default/block.block.locationproximityfilter.yml
+++ b/config/sites/default/block.block.locationproximityfilter.yml
@@ -9,8 +9,8 @@ dependencies:
     - tower_health
 id: locationproximityfilter
 theme: tower_health
-region: content
-weight: -2
+region: page_filters
+weight: -10
 provider: null
 plugin: location_proximity_filter
 settings:
