--- a/config/sites/default/block.block.services.yml
+++ b/config/sites/default/block.block.services.yml
@@ -10,8 +10,8 @@ dependencies:
     - tower_health
 id: services
 theme: tower_health
-region: content
-weight: -3
+region: page_filters
+weight: -11
 provider: null
 plugin: 'facet_block:services'
 settings:
