--- a/docroot/modules/custom/towerhealth_misc/towerhealth_misc.libraries.yml
+++ b/docroot/modules/custom/towerhealth_misc/towerhealth_misc.libraries.yml
@@ -4,3 +4,9 @@ drupal.towerhealth_misc.radio-widget:
     js/radio-widget.js: {}
   dependencies:
     - facets/widget
+drupal.towerhealth_misc.chosen-dropdown-widget:
+  version: VERSION
+  js:
+    js/chosen-dropdown-widget.js: {}
+  dependencies:
+    - facets/widget
