--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -5,9 +5,12 @@ dependencies:
   config:
     - field.field.node.service.field_area_of_care_ref
     - field.field.node.service.field_body
+    - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_metatags
     - node.type.service
   module:
+    - metatag
     - text
     - user
 id: node.service.default
@@ -42,6 +45,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_metatags:
+    weight: 104
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   links:
     weight: 100
