--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -5,11 +5,14 @@ dependencies:
   config:
     - field.field.node.service.field_area_of_care_ref
     - field.field.node.service.field_body
+    - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_metatags
     - node.type.service
     - workflows.workflow.default
   module:
     - content_moderation
+    - metatag
     - path
     - text
 id: node.service.default
@@ -45,6 +48,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_metatags:
+    weight: 124
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_firehose
     region: content
   moderation_state:
     type: moderation_state_default
