--- a/config/sites/default/core.entity_view_display.node.article.default.yml
+++ b/config/sites/default/core.entity_view_display.node.article.default.yml
@@ -4,8 +4,10 @@ status: true
 dependencies:
   config:
     - field.field.node.article.body
+    - field.field.node.article.field_metatags
     - node.type.article
   module:
+    - metatag
     - text
     - user
 id: node.article.default
@@ -19,6 +21,13 @@ content:
     weight: 101
     settings: {  }
     third_party_settings: {  }
+    region: content
+  field_metatags:
+    weight: 102
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   links:
     weight: 100
