--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.profile.field_insurance_ref
     - field.field.node.profile.field_location_ref
     - field.field.node.profile.field_medical_specialties_ref
+    - field.field.node.profile.field_metatags
     - field.field.node.profile.field_profile_board_certified
     - field.field.node.profile.field_profile_education
     - field.field.node.profile.field_profile_epic_id
@@ -34,6 +35,7 @@ dependencies:
   module:
     - entity_reference_revisions
     - media
+    - metatag
     - options
     - telephone
     - user
@@ -78,6 +80,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_metatags:
+    weight: 22
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: metatag_empty_formatter
     region: content
   field_profile_board_certified:
     weight: 12
