--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -71,7 +71,9 @@ module:
   redirect: 0
   rh_node: 0
   rh_taxonomy: 0
+  schema_medical_business: 0
   schema_metatag: 0
+  schema_physician: 0
   search_api: 0
   search_api_location: 0
   search_api_location_geocoder: 0
