Updated status with a non-working Taxonomy of Core Service. Still needs "Core Service" field within Tab.

--- a/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
+++ b/config/sites/default/field.field.node.service.field_medical_specialties_ref.yml
@@ -10,7 +10,7 @@ id: node.service.field_medical_specialties_ref
 field_name: field_medical_specialties_ref
 entity_type: node
 bundle: service
-label: 'Medical Specialties'
+label: 'Medical Specialty'
 description: ''
 required: false
 translatable: true
