--- a/config/sites/default/core.entity_form_display.node.service.default.yml
+++ b/config/sites/default/core.entity_form_display.node.service.default.yml
@@ -3,18 +3,96 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.service.field_area_of_care_ref
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
+    - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_flex
+    - field.field.node.service.field_service_intro
     - node.type.service
     - workflows.workflow.default
   module:
     - content_moderation
+    - field_group
     - paragraphs
     - path
     - text
+third_party_settings:
+  field_group:
+    group_vertical_tabs:
+      children:
+        - group_description
+        - group_core_service
+        - group_medical_specialties_condit
+        - group_flexible_components
+      parent_name: ''
+      weight: 10
+      format_type: tabs
+      format_settings:
+        id: ''
+        classes: ''
+        direction: vertical
+      label: 'Vertical Tabs'
+      region: content
+    group_description:
+      children:
+        - field_service_intro
+        - field_body
+      parent_name: group_vertical_tabs
+      weight: 6
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: Description
+      region: content
+    group_core_service:
+      children:
+        - field_service_core_bool
+      parent_name: group_vertical_tabs
+      weight: 7
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Core Service'
+      region: content
+    group_medical_specialties_condit:
+      children:
+        - field_conditions_ref
+        - field_medical_specialties_ref
+      parent_name: group_vertical_tabs
+      weight: 8
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Medical Specialties / Conditions'
+      region: content
+    group_flexible_components:
+      children:
+        - field_service_flex
+      parent_name: group_vertical_tabs
+      weight: 9
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Flexible Components'
+      region: content
 id: node.service.default
 targetEntityType: node
 bundle: service
@@ -22,26 +100,29 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_area_of_care_ref:
-    weight: 122
-    settings: {  }
-    third_party_settings: {  }
-    type: options_select
-    region: content
   field_body:
-    weight: 121
+    type: text_textarea
+    weight: 13
+    region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
-    type: text_textarea
+  field_conditions_ref:
+    type: entity_reference_autocomplete
+    weight: 10
     region: content
-  field_medical_specialties_ref:
-    weight: 123
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_location_ref:
+    weight: 9
     settings:
       match_operator: CONTAINS
       size: 60
@@ -49,27 +130,50 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
+  field_medical_specialties_ref:
+    type: entity_reference_autocomplete
+    weight: 11
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_service_core_bool:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_service_flex:
     type: entity_reference_paragraphs
-    weight: 124
+    weight: 10
+    region: content
     settings:
       title: Paragraph
       title_plural: Paragraphs
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: _none
+      default_paragraph_type: ''
     third_party_settings: {  }
+  field_service_intro:
+    type: text_textarea
+    weight: 12
     region: content
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 100
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -77,26 +181,26 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 15
+    weight: 3
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 120
+    weight: 8
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 16
+    weight: 4
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -104,7 +208,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -112,9 +216,8 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden:
-  field_conditions_ref: true
+hidden: {  }
