--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -3,14 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.service.field_area_of_care_ref
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
+    - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_flex
+    - field.field.node.service.field_service_intro
     - node.type.service
   module:
     - entity_reference_revisions
+    - options
     - text
     - user
 id: node.service.default
@@ -23,20 +26,20 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_area_of_care_ref:
-    weight: 102
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_body:
     weight: 101
     label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_location_ref:
+    weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_medical_specialties_ref:
     weight: 103
@@ -46,6 +49,13 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_service_core_bool:
+    weight: 107
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
   field_service_flex:
     type: entity_reference_revisions_entity_view
     weight: 104
@@ -54,6 +64,13 @@ content:
       view_mode: default
       link: ''
     third_party_settings: {  }
+    region: content
+  field_service_intro:
+    weight: 105
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
     region: content
   links:
     weight: 100
